[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/screens/data_agreement_screen.gd" type="Script" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label_link.tscn" type="PackedScene" id=7]

[node name="DataAgreementScreen" type="VBoxContainer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
screen_name = "data_agreement"
nav_bar_text = "Accept terms"
is_back_button_shown = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 248.0
margin_bottom = 714.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScaffolderLabel" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 248.0
margin_bottom = 14.0
text = "By using this app, you agree to our"
valign = 0
autowrap = true

[node name="Spacer2" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 18.0
margin_right = 124.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 248.0
margin_bottom = 36.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TermsAndConditionsLink" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 126.0
margin_bottom = 14.0
text = "Terms & Conditions"

[node name="ScaffolderLabel2" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 126.0
margin_right = 157.0
margin_bottom = 14.0
text = " and "
align = 0
valign = 0

[node name="PrivacyPolicyLink" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 157.0
margin_right = 244.0
margin_bottom = 14.0
focus_mode = 2
text = "Privacy Policy"

[node name="ScaffolderLabel3" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 244.0
margin_right = 248.0
margin_bottom = 14.0
text = "."
align = 0
valign = 0

[node name="Spacer5" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 692.0
margin_right = 124.0
margin_bottom = 692.0
size = Vector2( 0, 50 )

[node name="AgreeButton" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_left = 124.0
margin_top = 696.0
margin_right = 124.0
margin_bottom = 710.0
label = "I agree"
font_size = "L"

[node name="Spacer6" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 714.0
margin_right = 124.0
margin_bottom = 714.0
size = Vector2( 0, 30 )

[connection signal="pressed" from="VBoxContainer/AgreeButton" to="." method="_on_AgreeButton_pressed"]
